--- a/main.css
+++ b/main.css
@@ -1,25 +1,36 @@
 /* ALL */
-body {
-    background-color:rgba(226, 226, 226, 0.925);
-    margin:0;
+html, body {
+  margin: 0;
+  padding: 0;
+  
+
 }
 
+
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+body {
+    background-color:rgba(226, 226, 226, 0.925);
+}
+
 
 /* Index */
 .header {
-    color: #333;
+   
     text-align: center;
     padding:20px;
+    color:rgba(44, 44, 44, 0.89);
 }
 
 #i {
-    height: 250px;
-    width: 250px;
+    height: 285px;
+    width: 400px;
     float:right;
-    margin:50px;
+    margin:25px
 }
 
 .active {
@@ -30,16 +41,17 @@ body {
 .topnav {
     overflow: hidden;
     background-color: #333;
+    color:rgba(44, 44, 44, 0.89);
    
   
+  }
+  .main-nav {
+    text-align: center;
   }
   
   /* Style the topnav links */
   .topnav a {
-
- 
-    float: left;
-    display: block;
+    display: inline-block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
@@ -58,8 +70,44 @@ body {
     border: 0px;
     padding: 50px;
     margin: 30px;
+    color:rgba(44, 44, 44, 0.89);
+  }
+
+  .para {
+    color:rgba(44, 44, 44, 0.89);
+  }
+
+  .indexcontent {
+    margin:3em;
+    padding-bottom: 2.5rem; 
+   
   }
  
+  .main-footer {
+    background-color: #333;
+    color:#f2f2f2;
+    text-align: center;
+    padding: 5px;
+    padding-bottom: 2.5rem;
+    width: 100%;
+    height: 25%;
+    bottom: 0;
+    
+    
+  }
+
+
+
+  .sub-footer {
+    padding: 5px;
+    
+  }
+
+
+  .sub-footer img {
+    width:35px;
+    height:35px;
+  }
 
 
 
