--- a/main.css
+++ b/main.css
@@ -75,6 +75,11 @@ body {
 
   .para {
     color:rgba(44, 44, 44, 0.89);
+    margin:55px;
+    border:10px;
+    margin-top: -45px;
+    padding-left: 15px;
+   
   }
 
   .indexcontent {
@@ -82,24 +87,25 @@ body {
     padding-bottom: 2.5rem; 
    
   }
- 
+ /* Footer */
   .main-footer {
+    position:fixed;
     background-color: #333;
     color:#f2f2f2;
     text-align: center;
+    
     padding: 5px;
     padding-bottom: 2.5rem;
     width: 100%;
-    height: 25%;
+    height: 19%;
     bottom: 0;
     
     
   }
 
-
-
   .sub-footer {
     padding: 5px;
+    height:26%;
     
   }
 
@@ -108,6 +114,165 @@ body {
     width:35px;
     height:35px;
   }
+
+
+/* EDUCATION CSS */
+
+.edutable table {
+  width:730px;
+  height:270px;
+  font-family: 'Arial';
+  font-size: large;
+  margin: 45px auto;
+  border-collapse: collapse;
+  border: 1px solid #eee;
+  border-bottom: 2px solid #333;
+  box-shadow: 0px 0px 20px rgba(0,0,0,0.10),
+     0px 10px 20px rgba(0,0,0,0.05),
+     0px 20px 20px rgba(0,0,0,0.05),
+     0px 30px 20px rgba(0,0,0,0.05);
+ 
+}
+
+.edutable th {
+  background-color: #333;
+  color: #eee;
+  padding: 10px;
+}
+
+.edutable tr {
+  border-bottom: 3px solid #333;
+  
+}
+
+.edutable td {
+  padding: 20px;
+}
+
+/* SKIILS CSS */
+
+.python {
+  width: 60%;
+  background-color:#333;
+  
+}
+
+.android {
+  width: 40%;
+  background-color:#333;
+  
+}
+
+.c {
+  width: 80%;
+  background-color:#333;
+  
+}
+
+.hack {
+  width: 70%;
+  background-color:#333;
+  
+}
+
+.container {
+  width: 60%;
+  background-color: rgb(161, 160, 160);
+  margin:20px;
+  
+}
+
+.skills {
+  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+}
+
+.cl {
+  margin:20px;
+}
+
+
+/* ABOUT CSS */
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 250px;
+  border-radius: 5px;
+  margin:43px 0px 0px 200px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card img {
+  border-radius: 5px 5px 0 0;
+  width: 250px;
+}
+
+.card2 {
+  padding: 2px 16px;
+}
+
+.about {
+  width: 50%;
+  float: right;
+  font-size: x-large;
+  margin: -350px 50px 0px 0px;
+  padding:50px;
+  color:rgba(44, 44, 44, 0.89);
+}
+
+
+
+/* BLOG CSS */
+
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+  margin: 50px;
+  display: inline-block;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
 
 
 
